--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--スライダーの追加-->
     <script>
       let slider1 = {}; //スライダーを削除する場合この行は削除しない
-      slider1 = new Slider1d({width:Math.min(400, window.innerWidth),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff",value:0});
+      slider1 = new Slider1d({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff",value:0});
     </script>
 
 
