--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!--1つのキャンバスに帯と曲面両方-->
-
-<html lang="ja"></html>
+<html lang="ja">
 
   <head>
     <meta charset="UTF-8">
@@ -9,49 +7,57 @@
 
   <body>
 
+    <!--three.jsライブラリ　CDNを使ってインターネット経由でライブラリをインポートする-->
+    <script src="https://unpkg.com/three@0.131.3/build/three.min.js"></script>
+    <!--three.jsの機能を扱いやすくするための自作ライブラリ-->
+    <script src="common_cgweb2_b.js"></script> 
+    <!--jsでhtml要素の追加を行うための自作ライブラリ-->
+    <script src="create_element.js"></script> 
     <!--自作スライダーライブラリ-->
-    <script src="myslider.js"></script>
+    <script src="myslider_b.js"></script>
+    <!--表示するオブジェクトやレンダリングの設定、スライダー操作時の処理について記述したファイル-->
+    <script src='script4_2.js'></script>  
+
 
 
     <h3>ドーナツ型の裏返し</h3>
 
 
-    <!--キャンバス要素の生成　キャンバスを非表示にしたい場合は<canvas>の中にhiddenと記述する-->
-    <canvas id="3d_graphic_canvas" style="margin-left:-8px"></canvas> 
-    <!--キャンバスのサイズ指定-->
-    <script>  
-      let canvas1 = document.getElementById('3d_graphic_canvas'); 
-      var size1 = Math.min(500, window.innerWidth);  //画面横幅より広くなるのを回避するためにmin関数を使用
-      canvas1.width = size1 * window.devicePixelRatio;  //画素数
-      canvas1.height = size1 * window.devicePixelRatio * 0.85;
-      canvas1.style.width = size1;  //サイズ
-      canvas1.style.height = size1 * 0.85;
+    <!--キャンバスの追加-->
+    <script>
+      addCanvasC(mycanvas, {width:500, height:400});
     </script>
 
 
     <div style="height:10px"></div>
 
+
     <!--スライダーの追加-->
     <script>
-      let slider1 = {}; //スライダーを削除する場合この行は削除しない
-      slider1 = new Slider1d({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff",value:0});
+      slider1.addC({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff"});
+      slider_opacity.addC({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff"});
     </script>
 
 
-    <div style="height:20px"></div>
+    <div style="height:10px"></div>
+
+    
+    <!--チェックボックスの追加-->
+    <script>
+      addElementC(check_kirinuki);  //check_kirinukiはscript4で定義
+      addElementC( labelC("無限遠点に広がる部分を切り抜く", check_kirinuki) );  //labelC関数 第1引数：ラベルの文字, 第2引数：紐づけるチェックボックス
+    </script>
+
 
     <p>
-      画面をタッチしてグラフィックをいろいろな方向から見ることができます。<br>
-      2本指のピンチ操作により拡大縮小ができます。
+      画面上をマウスドラッグしてグラフィックをいろいろな方向から見ることができます。<br>
+      マウススクロールにより拡大縮小ができます。
     </p>
 
 
-    <!--three.jsライブラリ　CDNを使ってインターネット経由でライブラリをインポートする-->
-    <script src="https://unpkg.com/three@0.131.3/build/three.min.js"></script>
-
-    <!--プログラム-->
-    <script src="common_cgweb1.js"></script> <!--three.jsの機能を扱いやすくするための自作ライブラリ-->
-    <script src='script4.js'></script>  <!--表示するオブジェクトやレンダリングの設定、スライダー操作時の処理について記述したファイル-->
+    <script>
+      addCanvasC(subcanvas, {width:500, height:400});
+    </script>
 
 
   </body>
