--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!--キャンバスの追加-->
     <script>
-      addCanvasC(mycanvas, {width:500, height:400});
+      // addCanvasC(mycanvas, {width:500, height:400});
     </script>
 
 
