--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 
 
-    <h3>ドーナツ型の裏返し</h3>
+    <h3>ドーナツ型の裏返し 1107_v1</h3>
 
 
     <!--キャンバスの追加-->
     <script>
-      // addCanvasC(mycanvas, {width:500, height:400});
+      addCanvasC(mycanvas, {width:500, height:400});
     </script>
 
 
