--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <!--自作スライダーライブラリ-->
     <script src="myslider_b.js"></script>
     <!--表示するオブジェクトやレンダリングの設定、スライダー操作時の処理について記述したファイル-->
+    <script src='script4_2.js'></script>  
 
 
 
-
-    <h3>ドーナツ型の裏返し 1107_v4</h3>
+    <h3>ドーナツ型の裏返し 1107_v5</h3>
 
 
     <!--キャンバスの追加-->
     <script>
-      //addCanvasC(mycanvas, {width:500, height:400});
+      addCanvasC(mycanvas, {width:500, height:400});
     </script>
 
 
@@ -68,8 +68,6 @@
       canvas1.style.width = size;
       canvas1.style.height = size * 0.85;
     </script>
-
-    <script src='script4_2.js'></script>  
 
 
   </body>
