--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <!--スライダーの追加-->
     <script>
-      //slider1.addC({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff"});
-      //slider_opacity.addC({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff"});
+      slider1.addC({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff"});
+      slider_opacity.addC({width:Math.min(400, window.innerWidth*0.9),bar_width:Math.min(400*0.6, window.innerWidth*0.6),height:50,bar_height:15,thumb_radius:20,background_color:"#ffffff"});
     </script>
 
 
@@ -44,8 +44,8 @@
     
     <!--チェックボックスの追加-->
     <script>
-      //addElementC(check_kirinuki);  //check_kirinukiはscript4で定義
-      //addElementC( labelC("無限遠点に広がる部分を切り抜く", check_kirinuki) );  //labelC関数 第1引数：ラベルの文字, 第2引数：紐づけるチェックボックス
+      addElementC(check_kirinuki);  //check_kirinukiはscript4で定義
+      addElementC( labelC("無限遠点に広がる部分を切り抜く", check_kirinuki) );  //labelC関数 第1引数：ラベルの文字, 第2引数：紐づけるチェックボックス
     </script>
 
 
@@ -56,7 +56,7 @@
 
 
     <script>
-      //addCanvasC(subcanvas, {width:500, height:400});
+      addCanvasC(subcanvas, {width:500, height:400});
     </script>
 
     <canvas id="mycanvas"></canvas>
