--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
     <!--three.jsライブラリ　CDNを使ってインターネット経由でライブラリをインポートする-->
     <script src="https://unpkg.com/three@0.131.3/build/three.min.js"></script>
     <!--three.jsの機能を扱いやすくするための自作ライブラリ-->
-    <script src="common_cgweb2_d.js"></script> 
+    <script src="common_cgweb2_b.js"></script> 
     <!--jsでhtml要素の追加を行うための自作ライブラリ-->
     <script src="create_element.js"></script> 
     <!--自作スライダーライブラリ-->
@@ -21,11 +21,6 @@
 
     <h3>ドーナツ型の裏返し 1107_v16</h3>
 
-    <p id="text1"></p>
-    <p id="text2"></p>
-    <p id="text3"></p>
-    <p id="text4"></p>
-    
 
     <!--キャンバスの追加-->
     <script>
