--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,7 @@
 
     <!--キャンバスの追加-->
     <script>
-      addCanvasC(mycanvas, {width:500, height:400});
+      addCanvasC(mycanvas, {width:500, height:400, max_width:window.innerWidth*0.85});
     </script>
 
 
